Refactored for our Oryx

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,7 @@ set(VERSION_PATCH 0)
 
 set(CMAKE_BINARY_DIR ${SOURCE_DIR}/bin)
 set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR})
+set(CMAKE_CXX_FLAGS_RELEASE "-O0")
 
 #set ( PROJECT_LINK_LIBS libstrix.so )
 #link_directories( libs )
@@ -18,7 +19,10 @@ set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR})
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=c11 -Wall -g -lpthread -D _DEFAULT_SOURCE")
 include_directories(src/include)
 
-file(GLOB SOURCES src/main.c src/*/*.c src/mirrors/*/src/*.c)
+file(GLOB LINDERHOF src/linderhof/main.c src/linderhof/commander/*.c src/interface/*.c src/linderhof/mirrors/*/src/*.c src/common/*.c)
+file(GLOB CRAKE src/monitor/*.c src/common/*.c src/interface/configr.c src/interface/interface.c)
 
-add_executable(lhf ${SOURCES})
-target_link_libraries(lhf ${PROJECT_LINK_LIBS} )
+add_executable(lhf ${LINDERHOF})
+add_executable(crake ${CRAKE})
+
+#target_link_libraries(lhf ${PROJECT_LINK_LIBS} )
