Working but with some TODO/BUGS
Funcionando (enviando pacotes no injector se SegFault), mas ainda com
bugs.

A função sendto está dropando alguns pacotes no envio, devido a isso não
sei qual é o throughput máximo de uma thread no Spitfire. Esse é um
grande TODO para resolver, monitorar o throughput de cada injeção.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,7 +16,7 @@ set(CMAKE_CXX_FLAGS_RELEASE "-O0")
 #set ( PROJECT_LINK_LIBS libstrix.so )
 #link_directories( libs )
 
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=c11 -Wall -g -lpthread -D _DEFAULT_SOURCE")
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=c11 -Wall -g -lpthread -lcap -D _DEFAULT_SOURCE")
 include_directories(src/include)
 
 file(GLOB LINDERHOF src/linderhof/main.c src/linderhof/commander/*.c src/interface/*.c src/linderhof/mirrors/*/src/*.c src/common/*.c)
