--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,7 +20,7 @@ set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=c11 -Wall -g -lpthread -lcap -D _DEFAUL
 include_directories(src/include)
 
 file(GLOB LINDERHOF src/linderhof/main.c src/linderhof/*/*.c src/interface/configr.c src/interface/interface.c src/interface/oryx.c src/linderhof/mirrors/*/src/*.c src/common/*.c )
-file(GLOB SNOW .c src/common/*.c src/interface/configr.c src/interface/interface.c src/monitor/*.c src/interface/snowman.c )
+file(GLOB SNOW .c src/common/*.c src/interface/configr.c src/interface/interface.c src/linderhof/injector/logger.c src/monitor/*.c src/interface/snowman.c )
 
 add_executable(lhf ${LINDERHOF})
 add_executable(snowman ${SNOW})
