--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,9 +13,8 @@ set(CMAKE_BINARY_DIR ${SOURCE_DIR}/bin)
 set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR})
 set(CMAKE_CXX_FLAGS_RELEASE "-O0")
 
-#set ( PROJECT_LINK_LIBS libstrix.so )
-#link_directories( libs )
 
+#add_compile_definitions("ORYXNET")
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=c11 -Wall -g -lpthread -lcap -lm -D _DEFAULT_SOURCE")
 include_directories(src/include)
 
@@ -25,4 +24,3 @@ file(GLOB SNOW .c src/common/*.c src/interface/configr.c src/interface/interface
 add_executable(lhf ${LINDERHOF})
 add_executable(snowman ${SNOW})
 
-#target_link_libraries(lhf ${PROJECT_LINK_LIBS} )
